{
    "name": "DefaultControls",
    "maps": [
        {
            "name": "Default",
            "id": "bd3c6fed-28fc-4963-9172-3903e4aaef6a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "73b60a3f-9a1f-47b1-8ea6-88f0916a8ddb",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "5f1f1d16-5a80-42c8-9632-e4d26324212f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "588d5135-ff5f-4ab9-b820-347d72a3ecfc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "71792f49-e18a-4ebd-b1b0-2be09929d8b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "9e47f440-dd33-4562-811d-9d87304da8a6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b7aae1cc-4bd5-45c9-bc36-031f61716bcc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b06785ba-4aaf-4029-9e5d-9a419a0e232e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f3af3067-c187-4a9e-89bb-aa8b9e42ea83",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "285942a3-195b-4aee-bf59-88c42f795b06",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a417eb52-0287-45f5-806a-e6976bfa260d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db16b292-3f22-48e4-b0b0-41fc5cd2abad",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fe10902-135f-4a8d-abac-b0ae5285d275",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}